--- a/application_server/src/app/photos/photo-list/photos/photos.component.html
+++ b/application_server/src/app/photos/photo-list/photos/photos.component.html
@@ -1,3 +1,7 @@
+<p class="text-center text-muted" *ngIf="!photos.length">
+  Sorry, no photos were found
+</p>
+
 <ol class="list-unstyled row">
   <li *ngFor="let cols of rows" class="row">
     <div *ngFor="let photo of cols" class="col-4">
