--- a/application_server/src/app/photos/photo-list/photo-list.component.html
+++ b/application_server/src/app/photos/photo-list/photo-list.component.html
@@ -5,3 +5,5 @@
 </div>
 
 <app-photos [photos]="photos | filterByDescription: filter"></app-photos>
+
+<app-load-button (click)="loadMore()" [hasMore]="hasMore"></app-load-button>
