--- a/application_server/src/app/home/sign-in/sign-in.component.html
+++ b/application_server/src/app/home/sign-in/sign-in.component.html
@@ -8,12 +8,10 @@
       placeholder="user name"
       autofocus
     />
-    <small
+    <app-v-message
       *ngIf="loginForm.get('userName').errors?.required"
-      class="text-danger d-block mt-2"
-    >
-      User name is required!
-    </small>
+      text="User name is required!"
+    ></app-v-message>
   </div>
 
   <div class="form-group">
@@ -23,15 +21,17 @@
       class="form-control"
       placeholder="password"
     />
-    <small
+    <app-v-message
       *ngIf="loginForm.get('password').errors?.required"
-      class="text-danger d-block mt-2"
-    >
-      Password is required!
-    </small>
+      text="Password is required!"
+    ></app-v-message>
   </div>
 
-  <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-block">
+  <button
+    [disabled]="loginForm.invalid"
+    type="submit"
+    class="btn btn-primary btn-block"
+  >
     login
   </button>
 </form>
