Implementing please login anchor

--- a/application_server/src/app/core/header/header.component.html
+++ b/application_server/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-light bg-white">
     <a class="navbar-brand">ALURAPIC</a>
 
-    <div *ngIf="(user$ | async) as user; else login">
+    <div *ngIf="user$ | async as user; else login">
       <i class="fa fa-user-circle mr-1"></i>
       <a class="mr-1">{{ user.name }}</a>
       <a (click)="logout()">(Logout)</a>
@@ -10,7 +10,7 @@
 
     <ng-template #login>
       <span class="navbar-text">
-        Please, login!
+        <a [routerLink]="['']">Please, login!</a>
       </span>
     </ng-template>
   </nav>
