Adding children routes

--- a/application_server/src/app/home/sign-up/sign-up.component.html
+++ b/application_server/src/app/home/sign-up/sign-up.component.html
@@ -3,6 +3,7 @@
 <form [formGroup]="signUpForm" class="form mt-4" (submit)="signUp()">
   <div class="form-group">
     <input
+      #inputEmail
       formControlName="email"
       placeholder="email"
       class="form-control"
@@ -110,5 +111,5 @@
     Register
   </button>
 
-  <p>Already a user?<a [routerLink]="['']">Sign In!</a></p>
+  <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
