--- a/application_server/src/app/photos/photo-form/photo-form.component.html
+++ b/application_server/src/app/photos/photo-form/photo-form.component.html
@@ -1,28 +1,44 @@
 <div class="container">
-    <form [formGroup]="" class="row">
-      <div class="col-md-6 text-center">
-        <input type="file" accept="image/*">
+  <form [formGroup]="photoForm" class="row">
+    <div class="col-md-6 text-center">
+      <input formControlName="file" type="file" accept="image/*" />
+      <app-v-message
+        text="Please, select a photo"
+        *ngIf="photoForm.get('file').errors?.required"
+      >
+      </app-v-message>
+    </div>
+
+    <div class="col-md-6">
+      <div class="form-group">
+        <textarea
+          formControlName="description"
+          class="form-control form-control-sm"
+          placeholder="photo description"
+        ></textarea>
+        <app-v-message
+          text="Maximum size allowed is 300"
+          *ngIf="photoForm.get('description').errors?.maxlength"
+        >
+        </app-v-message>
       </div>
-  
-      <div class="col-md-6">
-        <div class="form-group">
-          <textarea 
-            class="form-control form-control-sm" 
-            placeholder="photo description"></textarea>
-        </div>
-  
-        <div class="form-group">
-          <label class="text-muted">
-            Allow comments
-            <input type="checkbox">
-          </label>
-        </div>
-  
-        <button type="submit" class="btn btn-primary btn-block">
-          Upload
-        </button>
-  
-        <a class="btn btn-secondary btn-block">Cancel</a>
+
+      <div class="form-group">
+        <label class="text-muted">
+          Allow comments
+          <input formControlName="allowComments" type="checkbox" />
+        </label>
       </div>
-    </form>
-  </div>
+
+      <button
+        [disabled]="photoForm.invalid"
+        type="submit"
+        class="btn btn-primary btn-block"
+      >
+        Upload
+      </button>
+
+      <a class="btn btn-secondary btn-block">Cancel</a>
+    </div>
+  </form>
+</div>
