--- a/application_server/src/app/photos/photo-form/photo-form.component.html
+++ b/application_server/src/app/photos/photo-form/photo-form.component.html
@@ -1,22 +1,33 @@
 <div class="container">
   <form [formGroup]="photoForm" class="row" (submit)="upload()">
     <div class="col-md-6 text-center">
-      <button type="button" (click)="fileInput.click()" class="btn btn-primary">
-        <i class="fa fa-image fa-4x align-middle"></i>
-      </button>
-      <input
-        #fileInput
-        hidden
-        formControlName="file"
-        type="file"
-        accept="image/*"
-        (change)="file = $event.target.files[0]"
-      />
-      <app-v-message
-        text="Please, select a photo"
-        *ngIf="photoForm.get('file').errors?.required"
-      >
-      </app-v-message>
+      <div class="form-group" *ngIf="!preview; else previewImage">
+        <button
+          type="button"
+          (click)="fileInput.click()"
+          class="btn btn-primary"
+        >
+          <i class="fa fa-image fa-4x align-middle"></i>
+        </button>
+        <input
+          #fileInput
+          hidden
+          formControlName="file"
+          type="file"
+          accept="image/*"
+          (change)="file = handleFile($event.target.files[0])"
+        />
+        <app-v-message
+          text="Please, select a photo"
+          *ngIf="photoForm.get('file').errors?.required"
+        >
+        </app-v-message>
+      </div>
+      <ng-template #previewImage>
+        <div class="text-center">
+          <app-photo [url]="preview" [title]="preview"> </app-photo>
+        </div>
+      </ng-template>
     </div>
 
     <div class="col-md-6">
