--- a/application_server/src/app/photos/photo-form/photo-form.component.html
+++ b/application_server/src/app/photos/photo-form/photo-form.component.html
@@ -3,6 +3,7 @@
     <div class="col-md-6 text-center">
       <div class="form-group" *ngIf="!preview; else previewImage">
         <button
+          appImmediateClick
           type="button"
           (click)="fileInput.click()"
           class="btn btn-primary"
