--- a/application_server/src/app/photos/photo-details/photo-details.component.html
+++ b/application_server/src/app/photos/photo-details/photo-details.component.html
@@ -13,14 +13,7 @@
         <hr />
       </small>
       <div class="mt-4">
-        <form>
-          <div class="input-group">
-            <textarea class="form-control"></textarea>
-            <div class="input-group-append">
-              <button class="btn btn-primary pull-left">Publish</button>
-            </div>
-          </div>
-        </form>
+        <app-photo-comments [photoId]="photoId"></app-photo-comments>
       </div>
     </div>
   </div>
