--- a/application_server/src/app/photos/photo-details/photo-details.component.html
+++ b/application_server/src/app/photos/photo-details/photo-details.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white border" *ngIf="(photo$ | async) as photo">
+<div class="bg-white border" *ngIf="photo$ | async as photo">
   <div class="row">
     <div class="col-lg-8">
       <app-photo
@@ -12,9 +12,8 @@
         <p class="text-left break-word">{{ photo.description }}</p>
         <hr />
       </small>
-      <div class="mt-4">
-        <app-photo-comments [photoId]="photoId"></app-photo-comments>
-      </div>
+
+      <app-photo-comments [photoId]="photoId"></app-photo-comments>
     </div>
   </div>
 </div>
