--- a/application_server/src/app/photos/photo-details/photo-comments/photo-comments.component.html
+++ b/application_server/src/app/photos/photo-details/photo-comments/photo-comments.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="(comments$ | async) as comments">
-  <ul class="list-unstyled">
+  <ul class="list-unstyled comments-list">
     <li *ngFor="let comment of comments">
       <a
         class="text-dark font-weight-bold mr-1"
