Implementing when the user has not authorized comments for a photo

--- a/application_server/src/app/photos/photo-details/photo-details.component.html
+++ b/application_server/src/app/photos/photo-details/photo-details.component.html
@@ -13,7 +13,13 @@
         <hr />
       </small>
 
-      <app-photo-comments [photoId]="photoId"></app-photo-comments>
+      <app-photo-comments 
+      *ngIf="photo.allowComments; else warning"
+      [photoId]="photoId"></app-photo-comments>
+
+      <ng-template #warning>
+        <p>User has disabled comments for this image</p>
+      </ng-template>
     </div>
   </div>
 </div>
