--- a/application_server/src/app/photos/photo-form/photo-form.component.html
+++ b/application_server/src/app/photos/photo-form/photo-form.component.html
@@ -16,7 +16,7 @@
           formControlName="file"
           type="file"
           accept="image/*"
-          (change)="file = handleFile($event.target.files[0])"
+          (change)="handleFile($event.target.files[0])"
         />
         <app-v-message
           text="Please, select a photo"
