--- a/application_server/src/app/photos/photo-details/photo-details.component.html
+++ b/application_server/src/app/photos/photo-details/photo-details.component.html
@@ -9,13 +9,16 @@
 
     <div class="col-lg-4">
       <small>
-        <p class="text-left break-word">{{ photo.description }}</p>
-        <hr />
+        <div class="text-left mb-4">
+          <i class="fa fa-comment-o fa-2x mr-2 ml-2"></i>{{ photo.comments }}
+          <i (click)="removePhoto()" class="fa fa-trash-o fa-2x pull-right mr-2"></i>
+        </div>
       </small>
 
-      <app-photo-comments 
-      *ngIf="photo.allowComments; else warning"
-      [photoId]="photoId"></app-photo-comments>
+      <app-photo-comments
+        *ngIf="photo.allowComments; else warning"
+        [photoId]="photoId"
+      ></app-photo-comments>
 
       <ng-template #warning>
         <p>User has disabled comments for this image</p>
