Hiding remove button when the user is not the owner or its not logged

--- a/application_server/src/app/photos/photo-details/photo-details.component.html
+++ b/application_server/src/app/photos/photo-details/photo-details.component.html
@@ -11,7 +11,7 @@
       <small>
         <div class="text-left mb-4">
           <i class="fa fa-comment-o fa-2x mr-2 ml-2"></i>{{ photo.comments }}
-          <i (click)="removePhoto()" class="fa fa-trash-o fa-2x pull-right mr-2"></i>
+          <i appPhotoOwnerOnly [ownedPhoto]="photo" (click)="removePhoto()" class="fa fa-trash-o fa-2x pull-right mr-2"></i>
         </div>
       </small>
 
