--- a/application_server/src/app/photos/photo-details/photo-details.component.html
+++ b/application_server/src/app/photos/photo-details/photo-details.component.html
@@ -10,8 +10,14 @@
     <div class="col-lg-4">
       <small>
         <div class="text-left mb-4">
+          <i appShowIfLogged class="fa fa-heart-o fa-2x mr-2 pull-left"> {{ photo.likes }} </i>
           <i class="fa fa-comment-o fa-2x mr-2 ml-2"></i>{{ photo.comments }}
-          <i appPhotoOwnerOnly [ownedPhoto]="photo" (click)="removePhoto()" class="fa fa-trash-o fa-2x pull-right mr-2"></i>
+          <i
+            appPhotoOwnerOnly
+            [ownedPhoto]="photo"
+            (click)="removePhoto()"
+            class="fa fa-trash-o fa-2x pull-right mr-2"
+          ></i>
         </div>
       </small>
 
