Implementing like photo

--- a/application_server/src/app/photos/photo-details/photo-details.component.html
+++ b/application_server/src/app/photos/photo-details/photo-details.component.html
@@ -10,7 +10,13 @@
     <div class="col-lg-4">
       <small>
         <div class="text-left mb-4">
-          <i appShowIfLogged class="fa fa-heart-o fa-2x mr-2 pull-left"> {{ photo.likes }} </i>
+          <i
+            (click)="like(photo)"
+            appShowIfLogged
+            class="fa fa-heart-o fa-2x mr-2 pull-left"
+          >
+            {{ photo.likes }}
+          </i>
           <i class="fa fa-comment-o fa-2x mr-2 ml-2"></i>{{ photo.comments }}
           <i
             appPhotoOwnerOnly
