--- a/application_server/src/app/photos/photo-form/photo-form.component.html
+++ b/application_server/src/app/photos/photo-form/photo-form.component.html
@@ -51,16 +51,20 @@
           <input formControlName="allowComments" type="checkbox" />
         </label>
       </div>
+      <div *ngIf="!percentDone; else uploadProgress">
+        <button
+          [disabled]="photoForm.invalid"
+          type="submit"
+          class="btn btn-primary btn-block"
+        >
+          Upload
+        </button>
 
-      <button
-        [disabled]="photoForm.invalid"
-        type="submit"
-        class="btn btn-primary btn-block"
-      >
-        Upload
-      </button>
-
-      <a class="btn btn-secondary btn-block">Cancel</a>
+        <a [routerLink]="['']" class="btn btn-secondary btn-block">Cancel</a>
+      </div>
+      <ng-template #uploadProgress>
+        <div class="text-center display-4">uploading {{ percentDone }}%</div>
+      </ng-template>
     </div>
   </form>
 </div>
