changing app title

--- a/application_server/src/app/core/header/header.component.html
+++ b/application_server/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-light bg-white">
-    <a class="navbar-brand">ALURAPIC</a>
+    <a class="navbar-brand">APPIC</a>
 
     <div *ngIf="user$ | async as user; else login">
       <i class="fa fa-user-circle mr-1"></i>
