Adding menu component

--- a/application_server/src/app/core/header/header.component.html
+++ b/application_server/src/app/core/header/header.component.html
@@ -1,7 +1,19 @@
 <header>
   <nav class="navbar navbar-light bg-white">
-    <a class="navbar-brand">APPIC</a>
-
+    <a class="navbar-brand">
+      <i
+        tabindex="0"
+        (keyup.space)="menu.toggle()"
+        (click)="menu.toggle()"
+        class="fa fa-bars mr-2"
+      ></i>
+      APIC
+    </a>
+    <app-menu #menu>
+      <ul class="list-unstyled">
+        <a appShowIfLogged [routerLink]="['p', 'add']">Upload</a>
+      </ul>
+    </app-menu>
     <div *ngIf="user$ | async as user; else login">
       <i class="fa fa-user-circle mr-1"></i>
       <a class="mr-1">{{ user.name }}</a>
